# dealer

./: .cvsignore  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  LICENSE  Makefile  Makefile.vars  README  README.md  Rules.mk  SourceVersion.cmake.in  __random.c  bittwiddle.cpp  bittwiddle.h  c4.c  c4.cpp  c4.h  card.h  check.pl  check.txt  compact_to_single_line.sed  configure  dds.cpp  dds.h  dealer.c  dealer.cpp  dealer.h  dealer_dev.html  dealer_once.cpp  defs.y  genddslib.cpp  genlib.c  genlib.h  getopt.c  getopt.h  initrandom.cpp  initrandom.h  main.c  main.cpp  (+18 more)
Examples/: .cvsignore  CMakeLists.txt  Descr.6c  Descr.dds.evalcontract  Descr.dds.test_lead  Descr.dds.test_lead_arithmetic  Descr.dds.test_lead_no_cards_defined  Descr.dds.test_tricks  Descr.evaluation  Descr.hm1dr2d  Descr.pbn_no_set_vuln  Descr.test_abs  Descr.test_altcount  Descr.test_altcount_large  Descr.test_altcount_neg  Descr.test_arminuns  Descr.test_average  Descr.test_cccc  Descr.test_comment  Descr.test_dealer  Descr.test_defaults_no_print  Descr.test_double_generate  Descr.test_double_produce  Descr.test_exhaust_only_one_known  Descr.test_exhaust_two_known  Descr.test_frequency2d  Descr.test_frequency_no_parenthes  Descr.test_generate_qstring  Descr.test_generate_string  Descr.test_generate_variable  Descr.test_imps  Descr.test_library  Descr.test_multiline_string  Descr.test_only_exression  Descr.test_operator_order  Descr.test_operators  Descr.test_packorder_random  Descr.test_pointcount_aliases  Descr.test_pointcount_too_many  Descr.test_predeal_all_cards  (+126 more)
MSDOS/: Makefile-MSDOS  README  cygtest.bat  ddostest.bat  dostest.bat  readme_mods.txt
Manual/: CMakeLists.txt  Rules.mk  authors.html  bugs.html  command.html  dealer.dpp.pod  dealer.pod  disclaimers.html  download.html  index.html  input.html  manual.html  output.html  perf.html  preproc.html  running.html  updates.html
Post_Processors/: CMakeLists.txt  README  Rules.mk  pbn_to_ascii.pl
Pre_Processors/: CMakeLists.txt  Dist.pm  Rules.mk  dealer.dpp
Random/: Makefile  README  Rules.mk  SFMT-params.h  SFMT.h  rand.c  srand.c
cmake/: FindDDS.cmake  FindPCGCXX.cmake  coverage.cmake  coverage_clear_counts.cmake  dealer_version.cmake  oldcmake.cmake  optimization_flags.cmake  pod2man.cmake  try_compile_cached.cmake
cpudetect/: CMakeLists.txt  Rules.mk  detect.cpp  detect.h  entry.h  main.cpp  target.cpp  target.h  target_int.h
getopt/: CMakeLists.txt  getopt.c  getopt.h
llvm/: Rules.mk  ast.cpp  ast.h  codegen.cpp  codegen.h  keyword.h  lexer.cpp  lexer.h  main.cpp  operator.cpp  operator.h  parser.cpp  parser.h
pavlicek/: .gitignore  Rules.mk  gdx.cpp  gdx.h  ghp.cpp  ghp.h  gsx.cpp  gsx.h  handpattern.cpp  handpattern.h  main.cpp  shp.cpp  shp.h
